한번 더 저장

--- a/aFile.html
+++ b/aFile.html
@@ -7,8 +7,8 @@
     <title>github pages로 호스팅하기기</title>
   </head>
   <body>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, nobis
-    voluptates! Sapiente, ad? In, repellendus cupiditate error ad dolore dolorem
-    nam quaerat culpa assumenda nostrum vel expedita. Saepe, quidem laudantium!
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit inventore at
+    impedit saepe porro quas delectus dolorem. Vitae reprehenderit vero ad earum
+    illum officia laudantium delectus, non quam obcaecati debitis?
   </body>
 </html>
