한번 더 저장함

--- a/aFile.html
+++ b/aFile.html
@@ -7,8 +7,8 @@
     <title>github pages로 호스팅하기기</title>
   </head>
   <body>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit inventore at
-    impedit saepe porro quas delectus dolorem. Vitae reprehenderit vero ad earum
-    illum officia laudantium delectus, non quam obcaecati debitis?
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi ratione cum
+    atque temporibus veniam adipisci excepturi, ipsum ut voluptas tempore
+    quisquam aut magni at animi corporis alias. Culpa, quibusdam nobis.
   </body>
 </html>
